<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#80f1e5d4">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.HomeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/main_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/question_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#80f1e5d4"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toStartOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            app:layout_constraintBottom_toTopOf="@id/guideline3">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/question_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:src="@drawable/exam" />
                <TextView
                    android:id="@+id/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:fontFamily="@font/one_mobile_pop"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:text="@string/menu_pastquestion"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/example_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#80f1e5d4"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toStartOf="@id/guideline10"
            app:layout_constraintStart_toStartOf="@id/guideline9"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            app:layout_constraintBottom_toTopOf="@id/guideline3">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/example_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:src="@drawable/test" />
                <TextView
                    android:id="@+id/example_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:fontFamily="@font/one_mobile_pop"
                    android:textSize="30sp"
                    android:text="@string/menu_example"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/checknote_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#80f1e5d4"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toStartOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintBottom_toTopOf="@id/guideline5">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/checknote_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:src="@drawable/registered" />
                <TextView
                    android:id="@+id/checknote_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:textAlignment="center"
                    android:fontFamily="@font/one_mobile_pop"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:text="@string/menu_checknote"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="@id/guideline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>